[gd_scene load_steps=4 format=3 uid="uid://clvbg53uuw7r2"]

[ext_resource type="Script" path="res://Scripts/Menu Scripts/menu_script.gd" id="1_80vmi"]
[ext_resource type="Texture2D" uid="uid://cbvpvysimjuan" path="res://Resources/Images/menu_test_01.jpg" id="1_f05g3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_furta"]
bg_color = Color(0.0541185, 0.0392914, 0.0185943, 1)

[node name="Pre_Inicio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_80vmi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_f05g3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.5
offset_top = -135.0
offset_right = 98.5
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="comenzar_bt" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_furta")
text = "COMENZAR
"

[connection signal="pressed" from="VBoxContainer/comenzar_bt" to="." method="_on_comenzar_bt_pressed"]
